--- a/appproject/accounts/templates/accounts/karihome.html
+++ b/appproject/accounts/templates/accounts/karihome.html
@@ -457,12 +457,12 @@
     const mumbles = [
       '眠いなぁ...💤',
       '暇だな～ 🎵',
-      'お腹すいたわん 🍖',
-      '遊びたいな！✨',
+      'お腹すいた 🍖',
+      '遊びたいな✨',
       'なんかないかな～ 🤔',
-      'ねむねむだわん... 😴',
+      'ねむねむだ... 😴',
       '誰か来ないかな？ 👀',
-      'たいくつだわん 🐾'
+      'たいくつだな'
     ];
     
     // ランダムな独り言を表示
